--- a/index.html
+++ b/index.html
@@ -3,70 +3,102 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>P5 DEVDATA</title>
+	<title>ODC/joofmusa</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body class="fontimage imgfont">
-	<div class="conteneur">
-	<div class="row">
-			<div class="col aside">
-				<br><br>
+
+<header>
+		<label for="menu-toggle">&#9776; </label>
+		<input type="checkbox" id="menu-toggle" class="btn1">
+			<div id="sidebar">
+				<br><br><br><br>
 				<center><img src="images/kala.jpg" class="iconimg">
 				<h3 class="text-light">Moussa Diouf</h3>
 				</center>
 				<br><br>
-				<center><h3 class="text-light">LISTE DES TP HTML</h3></center>
-				<ol>
-					<li class="list"><a href="TP1/TP1.html" class="text-info">TP1</a></li>
-					<hr>
-					<li class="list"><a href="TP2/TP2.html" class="text-info">TP2</a></li>
-					<hr>
-					<li class="list"><a href="TP3/index.html" class="text-info">TP3</a></li>
-					<hr>
-					<li class="list"><a href="TP4/TP4.html" class="text-info">TP4</a></li>
-					<hr>
-					<li class="list"><a href="TP5/TP5.html" class="text-info">TP5</a></li>
-					<hr>
-					<li class="list"><a href="TP6/TP6.html" class="text-info">TP6</a></li>
-					<hr>
-					<li class="list"><a href="TP7/index.html" class="text-info">TP7</a></li>
-					<hr>
+				<center><h4 class="text-light">LISTE DES TP</h4>
+				<ul>
+					<li class="list"><button><a href="TP1/TP1.html" class="text-orange">TP1</a></button></li>
+					<li class="list"><button><a href="TP2/TP2.html" class="text-orange">TP2</a></button></li>
+					<li class="list"><button><a href="TP3/index.html" class="text-orange">TP3</a></button></li>
+					<li class="list"><button><a href="TP4/TP4.html" class="text-orange">TP4</a></button></li>
+					<li class="list"><button><a href="TP5/TP5.html" class="text-orange">TP5</a></button></li>
+					<li class="list"><button><a href="TP6/TP6.html" class="text-orange">TP6</a></button></li>
+					<li class="list"><button><a href="TP7/index.html" class="text-orange">TP7</a></button></li>
 					
-				</ol>
+				</ul>
+				</center>
 			</div>
 
-			<div class="col">
 
 
-			<div class="entete">
-				<span> <img src="images/odc.png" align="right" width="180"> </span>
-				<h1 class="title">P5 DEVDATA/ODC</h1> 
+		<div class="menuprincipale">
+				<h1 class="text-light">ODC/P5 DEVDATA</h1>
+				<span> <img src="images/odc.png" align="right" width="180" height="100"  style="padding-right: 50px;"> </span>
+
+			<div class="posButton">
+			<input type="checkbox" id="modal">
+			<label for="modal" class="example-label">A propos de moi</label>
+
+				<label for="modal" class="modal-background"></label>
+				<div class="modal">
+					<div class="modal-header">
+						<h3 >Qui suis -je?</h3>
+				        <label for="modal"><h3 class="text-light">X</h3></label>
+				    </div>
+
+					<table>
+						<thead >
+							<h3>Moussa Diouf</h3>
+							<h4>Bioinformaticien, Developpeur Data</h4>
+						</thead>
+						<tr>
+							<td><b >Github</b> </td>
+							<td><a href="https://github.com/JoofMoussa" class="text-info">Lien Github</a></td>
+						</tr>
+
+						<tr>
+							<td><b>Youtube</b></td>
+							<td><a href="https://www.youtube.com/channel/UC6wEq5yjn78XFya6b3EbgLw" class="text-info">Chaine Youtube</a></td>
+						</tr>
+
+						<tr>
+						<td><b>Mail</b></td>
+						<td><a href="mailto:dioufm65@yahoo.com" class="text-info">Envoyer un mail</a></td>
+						</tr>
+
+						</table>
+
+				</div>
+
 			</div>
+		</div>
 
-			<div class="contenu">
-			<p>
-				<h1>A propos de moi</h1>
-				<p class="text-light">Moussa Diouf, Developpeur Data</p>
-				<h3><b class="text-light">Github</b> : <a href="https://github.com/JoofMoussa" class="text-info">Lien Github</a> </h3>
-				<h3><b class="text-light">Youtube</b> : <a href="https://www.youtube.com/channel/UC6wEq5yjn78XFya6b3EbgLw" class="text-info">Chaine Youtube</a> </h3>
-				<h3><b class="text-light">Mail</b> :<a href="mailto:dioufm65@yahoo.com" class="text-info">Envoyer un mail</a>  </h3>
-			</p>
-			<p>
-			<h1>Les principaux objectifs du référentiel DEVDATA sont les suivants :</h1>
+</header>
+
+		<div class="contenu">
+			<br><br>
+			<h1 class="text-light">Les principaux objectifs du référentiel DEVDATA sont les suivants :</h1>
 			<h3 class="text-light">
-			<ul>
-				<li>Assurer la qualité et la cohérence des données à toutes les étapes du processus de développement.</li>
-				<li>Améliorer la sécurité des données en garantissant la confidentialité, l'intégrité et la disponibilité des données.</li>
-				<li>Optimiser les coûts en évitant les doublons et les incohérences dans les données.</li>
-				<li>Faciliter la collaboration entre les équipes de développement et les parties prenantes du projet.</li>
-				<li>Favoriser l'adoption des meilleures pratiques en matière de développement de données.</li>
-			</ul>
+			<dl>
+				<li><p>Assurer la qualité et la cohérence des données à toutes les étapes du processus de développement.</p></li>
+				<li><p>Améliorer la sécurité des données en garantissant la confidentialité, l'intégrité et la disponibilité des données.</p></li>
+				<li><p>Optimiser les coûts en évitant les doublons et les incohérences dans les données.</p></li>
+				<li><p>Faciliter la collaboration entre les équipes de développement et les parties prenantes du projet.</p></li>
+				<li><p>Favoriser l'adoption des meilleures pratiques en matière de développement de données.</p></li>
+			</dl>
 			</h3>
-			</p>
 
-			</div>
+		</div>
 
-</div>
+	
+
+		<div class="contenu">
+			<h2 class="text-light">HTML est un langage de balisage qui est utilisé pour créer des pages web.<br> Il permet aux développeurs web de structurer et de formater le contenu d'une page de manière cohérente et structurée, ce qui facilite la lecture et l'interprétation pour les utilisateurs.<br> 
+			Les balises HTML sont essentielles pour décrire la structure et la signification du contenu d'une page web, et pour donner <br>des informations supplémentaires à certains éléments tels que les images, les liens, les formulaires, etc.<br> 
+			</h2>
+		</div>
 </body>
 </html>
