--- a/TP7/index.html
+++ b/TP7/index.html
@@ -5,23 +5,41 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>page statique</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
-	<p style="text-align:right;"><a href="../index.html">Retour au Menu</a></p>
-	<div class="sidebar">
-		<a href="index2.html">
-		<button type="button" class="btn1"><hr></hr><hr></hr><hr></hr></button>
-		</a>
-		<center><h1>I.O.C</h1>
-		<br><h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.</h4> 
-		</center>
-		<div class="posButton">
-		
-			 <input type="checkbox" id="modal">
-			 <!-- <center><button for="modal" class="example-label" >Sign Up</button></center> -->
-			 <center><label for="modal" class="example-label">Sign Up</label></center>
+
+<header>
+		<label for="menu-toggle">&#9776; </label>
+		<input type="checkbox" id="menu-toggle" class="btn1">
+			<div id="sidebar">
+				<br><br><br><br><br><br>
+				<center><div class="imgicon"></div>
+				<h3 class="text-light">Moussa Diouf</h3>
+				</center>
+				      <ol>
+							<li>Home</li>
+							<hr>
+							<li>Porfolio</li>
+							<hr>
+							<li>Blog</li>
+							<hr>
+							<li>Contact Me</li>
+							<hr>
+							<li><a href="../index.html" class="text-light">Retour au Menu</a></li>
+					</ol>
+			</div>
+
+
+
+		<div class="menuprincipale">
+				<center><h1>I.O.C</h1>
+				<br><h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.</h4> 
+				</center>
+
+			<div class="posButton">
+			<input type="checkbox" id="modal">
+			<center><label for="modal" class="example-label">Sign Up</label></center>
 
 				<label for="modal" class="modal-background"></label>
 				<div class="modal">
@@ -54,42 +72,42 @@
 				      <button type="submit" class="btnsubmit">Submit</button>
 				</div>
 
+			</div>
 		</div>
-	</div>
+</header>
 
 
-	<div class="contenu">
-		<div>
-		<h2>What about my web pages ?</h2>
-		 <p>
-		 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.
-		 </p>
-		 <p>
-		 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio. Lorem ipsum dolor sit amet.
-		 </p>
-		</div>
-		<div>
-		<h2>Tell me more </h2>
-		<p>
-		 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.
-		 </p>
-		</div>
+		<div class="contenu">
+				<div>
+				<h2>What about my web pages ?</h2>
+				 <p>
+				 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.
+				 </p>
+				 <p>
+				 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio. Lorem ipsum dolor sit amet.
+				 </p>
+				</div>
+				<div>
+				<h2>Tell me more </h2>
+				<p>
+				 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eros mi, ornare eget risus quis, eleifend gravida odio.Lorem ipsum dolor sit amet.
+				 </p>
+				</div>
 
-		<div>
-		<h2>Languages</h2>
-		<ul>
-		    <li>Ecma Script</li>
-		    <li>Java</li>
-		    <li>Language C</li>
-		</ul>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam<br>, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum<br> dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-		</div>
-
-	</div>
+				<div>
+				<h2>Languages</h2>
+				<ul>
+				    <li>Ecma Script</li>
+				    <li>Java</li>
+				    <li>Language C</li>
+				</ul>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam<br>, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum<br> dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				</div>
 
 
+		</div>					
 
 
 </body>
