--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<div class="menuprincipale">
 				<h1 class="text-light">ODC/P5 DEVDATA</h1>
-				<span> <img src="images/odc.png" align="right" width="180" height="100"  style="padding-right: 50px;"> </span>
+				<span> <a href="https://orangedigitalcenter.sn/" target="_blank"> <img src="images/odc.png" align="right" width="180" height="100"  style="padding-right: 50px;"> </a></span>
 
 			<div class="posButton">
 			<input type="checkbox" id="modal">
